platform-dev/overlays/dev/demo-manager-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-demo-manager
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo-manager
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-manager
    spec:
      containers:
      - name: demo-manager
        image: ghcr.io/virtocommerce/platform-demo-manager:0.0.3
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
          limits:
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo-manager
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-manager-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    nginx.ingress.kubernetes.io/default-backend: $(VC_INSTANCE)-demo-manager
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:   
      - "demo-manager.govirto.com"
      secretName: $(VC_INSTANCE)-demo-manager-$(VC_NAMESPACE)-tls
  rules:
  - host: demo-manager.govirto.com
    http:
      paths:
      - backend:
          serviceName: demo-manager
          servicePort: 80
        path: /
      - backend:
          serviceName: platform
          servicePort: 80
        path: /api
      - backend:
          serviceName: platform
          servicePort: 80
        path: /connect/token
